modify viewContent viewComment viewTopic

--- a/接口文档_婚庆攻略.md
+++ b/接口文档_婚庆攻略.md
@@ -70,7 +70,7 @@
  }
 ```
 
-### @浏览具体话题- `admin/gonglue/topic/view` - `post`  
+### @浏览具体话题- `admin/gonglue/topic/viewTopic` - `post`  
 
 @head：
 ```jsonc
@@ -81,19 +81,15 @@
 
 ```jsonc
 {
-    ["topic_id":number //话题id
-
-    'num': number //每页数量评论
-    'page': number //第几页评论
-    ]
+    "topic_id":number //话题id    
 }
 ```
 
 @return: 
 ```jsonc
 {
-    "viewData":
-    [{"id":number, //话题id
+   
+    "id":number, //话题id
     "flag":string, //不用管
     "title":string, //话题标题
     "content":string, //话题内容
@@ -108,10 +104,34 @@
     "weigh":number, //权重
     "status":string, //"normal", "hidden" 
     "flag_text":string,
-    "status_text":string}],
+    "status_text":string
 
-    "commentData":
-    [{"id":number, //评论id
+}
+```
+
+### @浏览话题评论- `admin/gonglue/topic/view` - `post`  
+
+@head：
+```jsonc
+{
+}
+```
+@request:  
+
+```jsonc
+{
+    "topic_id":number //话题id
+
+    'num': number //每页数量评论
+    'page': number //第几页评论
+    
+}
+```
+
+@return: 
+```jsonc
+{
+    "id":number, //评论id
       "topic_id", //对应话题id
       "username":string, //发表话题的用户名
       "avatar":string, //用户头像
@@ -120,7 +140,6 @@
       "comments":number, //不使用！
       "createtime":number, //创建时间
       "updatetime":number, //更新时间 
-    }]
 }
 ```
 
@@ -357,7 +376,7 @@
 }
 ```
 
-### @浏览具体文章- `admin/gonglue/content/view` - `post`  
+### @浏览具体文章- `admin/gonglue/content/viewContent` - `post`  
 
 @head：
 ```jsonc
@@ -369,9 +388,6 @@
 ```jsonc
 {
     "content_id":number, //文章id
-
-    'page': number, //第几页评论
-    'num': number //每页数量评论
 }
 ```
 
@@ -395,9 +411,30 @@
     "status":string, //状态"normal", "hidden" 
     "flag_text":string,
     "status_text":string}],
+}
+```
 
-    "commentData":
-    [{"id":number, //评论id
+### @浏览具体文章评论- `admin/gonglue/content/viewComment` - `post`  
+
+@head：
+```jsonc
+{
+}
+```
+@request:  
+
+```jsonc
+{
+    "content_id":number, //文章id
+    'number': number, //每页数量
+    'page':number //第几页
+}
+```
+
+@return: 
+```jsonc
+{
+      "id":number, //评论id
       "content_id", //对应文章id
       "username":string, //发表评论的用户名
       "avatar":string, //用户头像
@@ -406,7 +443,6 @@
       "comments":number, //不使用！
       "createtime":number, //创建时间
       "updatetime":number, //更新时间 
-    }]
 }
 ```
 
