--- a/接口文档_婚庆攻略.md
+++ b/接口文档_婚庆攻略.md
@@ -260,6 +260,7 @@
 ```jsonc
 {
     'topic_id': number //话题id
+    'username': string //用户名
 }
 ```
 
@@ -287,6 +288,7 @@
 ```jsonc
 {
     'comment_id': number //话题评论id
+    'username': string //用户名
 }
 ```
 
@@ -301,6 +303,63 @@
 :---:|:---:|:---:
 0|操作错误|错误的时候没有返回的数据
 1|操作成功|
+
+### @话题点赞状态- `admin/gonglue/topic/topicLikeStatus` - `post`  
+
+@head：
+```jsonc
+{
+}
+```
+@request:  
+
+```jsonc
+{
+    'topic_id': number //话题id
+    'username': string //用户名
+}
+```
+
+@return: 
+```jsonc
+{
+     "code":number, //状态码
+     "msg":string, //返回信息
+}
+```
+状态码|含义|备注
+:---:|:---:|:---:
+0|操作错误|错误的时候没有返回的数据
+1|操作成功|
+
+### @话题评论点赞- `admin/gonglue/topic/topicCommentLikeStatus` - `post`  
+
+@head：
+```jsonc
+{
+}
+```
+@request:  
+
+```jsonc
+{
+    'comment_id': number //话题评论id
+    'username': string //用户名
+}
+```
+
+@return: 
+```jsonc
+{
+     "code":number, //状态码
+     "msg":string, //返回信息
+}
+```
+状态码|含义|备注
+:---:|:---:|:---:
+0|操作错误|错误的时候没有返回的数据
+1|操作成功|
+
 
 ### @文章资讯获取分类- `admin/gonglue/content/category` - `post`  
  
@@ -563,6 +622,7 @@
 ```jsonc
 {
     'content_id': number //文章id
+    'username': string //用户名
 }
 ```
 
@@ -590,6 +650,63 @@
 ```jsonc
 {
     'comment_id': number //文章评论id
+    'username': string //用户名
+}
+```
+
+@return: 
+```jsonc
+{
+     "code":number, //状态码
+     "msg":string, //返回信息
+}
+```
+状态码|含义|备注
+:---:|:---:|:---:
+0|操作错误|错误的时候没有返回的数据
+1|操作成功|
+
+### @文章点赞状态- `admin/gonglue/content/contentLikeStatus` - `post`  
+
+@head：
+```jsonc
+{
+}
+```
+@request:  
+
+```jsonc
+{
+    'content_id': number //文章id
+    'username': string //用户名
+}
+```
+
+@return: 
+```jsonc
+{
+     "code":number, //状态码
+     "msg":string, //返回信息
+}
+```
+状态码|含义|备注
+:---:|:---:|:---:
+0|操作错误|错误的时候没有返回的数据
+1|操作成功|
+
+### @文章评论点赞状态- `admin/gonglue/content/contentCommentLikeStatus` - `post`  
+
+@head：
+```jsonc
+{
+}
+```
+@request:  
+
+```jsonc
+{
+    'comment_id': number //文章评论id
+    'username': string //用户名
 }
 ```
 
